# iscore-addon-audio

./: .gitmodules  CMakeLists.txt  README.md  iscore_plugin_audio.cpp  iscore_plugin_audio.hpp
Audio/: AudioApplicationPlugin.cpp  AudioApplicationPlugin.hpp  AudioArray.hpp  AudioBlock.cpp  AudioBlock.hpp  AudioDecoder.cpp  AudioDecoder.hpp  AudioDocumentPlugin.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioFactory.cpp  AudioFactory.hpp  AudioProcess.cpp  AudioProcess.hpp  AudioProcessMetadata.cpp  AudioProcessMetadata.hpp  AudioProcessModel.cpp  AudioProcessModel.hpp  MediaFileHandle.cpp  MediaFileHandle.hpp  WavBlock.cpp  WavBlock.hpp
Audio/AudioStreamEngine/: AudioApplicationPlugin.cpp  AudioApplicationPlugin.hpp  AudioComponent.cpp  AudioComponent.hpp  AudioDependencyGraph.cpp  AudioDependencyGraph.hpp  AudioDocumentPlugin.cpp  AudioDocumentPlugin.hpp  AudioGraphNode.hpp  Context.hpp  GroupAudioStream.h  TGroupAudioStream.cpp  TGroupAudioStream.hpp  Utility.cpp  Utility.hpp
Audio/AudioStreamEngine/Audio/: EffectComponent.cpp  EffectComponent.hpp  EffectComponentFactory.cpp  EffectComponentFactory.hpp  InputComponent.cpp  InputComponent.hpp  MixComponent.cpp  MixComponent.hpp  MixComponentFactory.cpp  MixComponentFactory.hpp  ReturnComponent.cpp  ReturnComponent.hpp  ReturnComponentFactory.cpp  ReturnComponentFactory.hpp  SendComponent.cpp  SendComponent.hpp  SendComponentFactory.cpp  SendComponentFactory.hpp  SoundComponent.cpp  SoundComponent.hpp  SoundComponentFactory.cpp  SoundComponentFactory.hpp
Audio/AudioStreamEngine/Clock/: AudioClock.cpp  AudioClock.hpp
Audio/AudioStreamEngine/Scenario/: ConstraintComponent.cpp  ConstraintComponent.hpp  EventComponent.cpp  EventComponent.hpp  LoopComponent.cpp  LoopComponent.hpp  LoopComponentFactory.cpp  LoopComponentFactory.hpp  ProcessComponent.cpp  ProcessComponent.hpp  ScenarioComponent.cpp  ScenarioComponent.hpp  ScenarioComponentFactory.cpp  ScenarioComponentFactory.hpp  StateComponent.cpp  StateComponent.hpp  SyncComponent.cpp  SyncComponent.hpp  TimeNodeComponent.cpp  TimeNodeComponent.hpp
Audio/AudioStreamEngine/Streams/: AudioStreamIScoreExtensions.cpp  AudioStreamIScoreExtensions.h  ExecutorAudioEffect.hpp  LV2Context.hpp  TBufferManager.cpp  TBufferManager.hpp  TChannelAudioStream.cpp  TChannelAudioStream.hpp  TFixedLoopAudioStream.cpp  TFixedLoopAudioStream.hpp  TGroupAudioMixer.cpp  TGroupAudioMixer.hpp  TGroupAudioStream.cpp  TGroupAudioStream.hpp  TGroupRenderer.cpp  TGroupRenderer.hpp  TPlayerAudioStream.cpp  TPlayerAudioStream.hpp  TReturnAudioStream.cpp  TReturnAudioStream.hpp  TSendAudioStream.cpp  TSendAudioStream.hpp  TSimpleBufferAudioStream.cpp  TSimpleBufferAudioStream.hpp  TSinusAudioStream.cpp  TSinusAudioStream.hpp
Audio/Commands/: AddTrack.cpp  AddTrack.hpp  AudioCommandFactory.cpp  AudioCommandFactory.hpp  ChangeAudioFile.cpp  ChangeAudioFile.hpp  ChangeSend.cpp  ChangeSend.hpp  CreateEffectAutomation.hpp  CreateSoundBox.hpp  EditFaustEffect.cpp  EditFaustEffect.hpp  InsertEffect.cpp  InsertEffect.hpp  RemoveTrack.cpp  RemoveTrack.hpp  SetData.cpp  SetData.hpp  UpdateMix.cpp  UpdateMix.hpp
Audio/CustomEngine/: AudioBlock.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioProcess.cpp  AudioProcess.hpp  WavBlock.hpp
Audio/CustomEngine/Faust/: CMakeLists.txt  FaustAudioBlock.hpp
Audio/EffectProcess/: EffectFactory.cpp  EffectFactory.hpp  EffectModel.cpp  EffectModel.hpp  EffectModelSerialization.cpp  EffectProcessFactory.cpp  EffectProcessFactory.hpp  EffectProcessMetadata.hpp  EffectProcessModel.cpp  EffectProcessModel.hpp  EffectProcessModelSerialization.cpp  FaustEffectFactory.cpp  FaustEffectFactory.hpp  FaustEffectModel.cpp  FaustEffectModel.hpp  FaustEffectModelSerialization.cpp  MissingEffectModel.cpp  MissingEffectModel.hpp  MissingEffectModelSerialization.cpp
Audio/EffectProcess/Effect/: EffectComponent.hpp  EffectFactory.cpp  (+5 more)
Audio/GenProcess/: GenProcessFactory.hpp  GenProcessMetadata.hpp  GenProcessModel.cpp  GenProcessModel.hpp  GenProcessModelSerialization.cpp
Audio/InputProcess/: InputProcessFactory.cpp  InputProcessFactory.hpp  InputProcessMetadata.hpp  InputProcessModel.cpp  InputProcessModel.hpp  InputProcessModelSerialization.cpp
Audio/Inspector/: AudioInspector.cpp  AudioInspector.hpp  EffectInspector.cpp  EffectInspector.hpp  Factory.cpp  Factory.hpp  MixInspector.cpp  MixInspector.hpp  PressableWidget.hpp  ReturnInspector.cpp  ReturnInspector.hpp
Audio/MixProcess/: Mix.hpp  MixProcessFactory.cpp  MixProcessFactory.hpp  MixProcessMetadata.hpp  MixProcessModel.cpp  MixProcessModel.hpp  MixProcessModelSerialization.cpp
Audio/Panel/: Track.cpp  Track.hpp  TrackListPanel.cpp  TrackListPanel.hpp  TrackListPanelFactory.cpp  TrackListPanelFactory.hpp  TrackModel.cpp  TrackModel.hpp  TrackSerialization.cpp
Audio/ReturnProcess/: ReturnProcessFactory.cpp  ReturnProcessFactory.hpp  ReturnProcessMetadata.hpp  ReturnProcessModel.cpp  ReturnProcessModel.hpp  ReturnProcessModelSerialization.cpp
Audio/SendProcess/: SendProcessFactory.cpp  SendProcessFactory.hpp  SendProcessMetadata.hpp  SendProcessModel.cpp  SendProcessModel.hpp  SendProcessModelSerialization.cpp
Audio/SoundProcess/: SoundProcessFactory.cpp  SoundProcessFactory.hpp  SoundProcessLayer.cpp  SoundProcessLayer.hpp  SoundProcessLayerPanelProxy.hpp  SoundProcessLayerSerialization.cpp  SoundProcessMetadata.hpp  SoundProcessModel.cpp  SoundProcessModel.hpp  SoundProcessModelSerialization.cpp  SoundProcessPresenter.cpp  SoundProcessPresenter.hpp  SoundProcessView.cpp  SoundProcessView.hpp
Audio/TrackView/: TrackList.cpp  TrackList.hpp  TrackPanelId.hpp  TrackPanelModel.cpp  TrackPanelModel.hpp  TrackPanelPresenter.cpp  TrackPanelPresenter.hpp  TrackPanelView.cpp  TrackPanelView.hpp
Faust/: FaustAudioBlock.cpp  FaustAudioBlock.hpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
tools/travis/: deps.sh
tracklistview/TrackListView/: CircularButton.qml  DeviceInfo.hpp  MainForm.ui.qml  Track.qml  TrackList.cpp  TrackList.hpp  TrackList.qml  TrackListView.pro  main.cpp  main.qml  qml.qrc
(+43 files in other folders)
